<resources>
    <string name="app_name">HelpAndoApp</string>
    <!-- LogIn Activity -->
    <string name="ivLogo_description">App logo</string>
    <string name="etUser_hint">Username</string>
    <string name="etPassword_hint">Password</string>
    <string name="tvSignUp_description">Sign up here</string>
    <string name="tvSignUp_text">Sign Up</string>
    <string name="btnSignIn_description">Button to sign in</string>
    <string name="btnSignIn_text">Sign In</string>
    <!-- Sign Up Activity -->
    <string name="ivIcon_description">User icon</string>
    <string name="etName_hint">Name</string>
    <string name="etUserType_hint">Select user type</string>
    <string name="btnSignUp_text">Sign Up</string>
    <string name="btnSignUp_description">Sign Up</string>
    <string-array name="user_type">
        <item>Volunteer</item>
        <item>Sponsor</item>
    </string-array>
    <!-- Menus -->
    <string name="itemHomeFeed">Home Feed</string>
    <string name="itemToDo">To do list</string>
    <string name="itemNonProfit">Non-profit</string>
    <string name="itemProfile">User profile</string>
    <string name="etNameTask_hint">Task name</string>
    <string name="etTaskDescription_hint">Description</string>
    <string name="etCategory_hint">Choose a category</string>
    <string name="etPoints_hint">Points</string>
    <string name="btnSend_text">Add Task</string>
    <!-- AddTask Activity -->
    <string-array name="categories1">
        <item>Animal Welfare</item>
        <item>Child Protection</item>
        <item>Climate Action</item>
        <item>Peace and Reconciliation</item>
        <item>Disaster Response</item>
        <item>Economic Growth</item>
        <item>Education</item>
        <item>Ecosystem Restoration</item>
        <item>Gender Equality</item>
        <item>Physical Health</item>
        <item>Ending Human Trafficking</item>
        <item>Justice and Human Rights</item>
        <item>Sport</item>
        <item>Digital Literacy</item>
        <item>Food Security</item>
        <item>Arts and Culture</item>
        <item>LGBTQIA+ Equality</item>
        <item>COVID-19</item>
        <item>Clean Water</item>
        <item>Disability Rights</item>
        <item>Ending Abuse</item>
        <item>Mental Health</item>
        <item>Racial Justice</item>
        <item>Refugee Rights</item>
        <item>Reproductive Health</item>
        <item>Safe Housing</item>
        <item>Sustainable Agriculture</item>
        <item>Wildlife Conservation</item>
    </string-array>
    <string-array name="categoriesOpc1">
        <item>Arts, Culture and Humanities</item>
        <item>Education</item>
        <item>Environment and Animals</item>
        <item>Health</item>
        <item>Human Services</item>
        <item>International, Foreign Affairs</item>
        <item>Public, Social Benefit</item>
        <item>Religion Related</item>
        <item>Mutual/Membership Benefit</item>
        <item>Unknown, Unclassified</item>
    </string-array>
    <!-- ToDo Activity -->
    <string name="category">Category: %s</string>
    <string name="points">Points: %s</string>
    <string name="order_by">Order by:</string>
    <string name="btnComplete">Done!</string>
    <string-array name="order_by">
        <item>Week</item>
        <item>Month</item>
        <item>Year</item>
    </string-array>
    <!-- Toasts -->
    <string name="fields_required">All fields are required</string>
    <string name="wrong">Something went wrong</string>
    <string name="success_task">Your task has been submitted!</string>
    <string name="try_again">Try again!</string>
    <string name="success_sign_up">You can log in now!</string>
    <!-- Maps Activity -->
    <string-array name="filter_by">
        <item>ADDRESS</item>
        <item>CITIES </item>
        <item>ESTABLISHMENT</item>
        <item>GEOCODE</item>
        <item>REGIONS</item>
    </string-array>
    <!-- User Profile -->
    <string name="points_title">Points</string>
    <string name="etPost_hint">What have you done to help today?</string>
    <string name="btnPost">Post now</string>
    <string name="text_required">The post requires text.</string>
    <string name="success_post">Post successful! Posted successfully.</string>
    <string name="postAboutTask">What do you have to say about the task \"%s\"?</string>
    <string name="random">Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen.</string>
    <string name="answerTask">In response to \'%s\' task:</string>
    <string name="address">Address:</string>
    <string name="credits">Data provided by: https://www.globalgiving.org/</string>
    <string name="etNameContact_hint">Name of the person that needs help:</string>
    <string name="etTelContact_hint">Contact Telephone:</string>
    <string name="etExtraInfoContact_hint">Add any extra contact information to help this person:</string>
    <string name="dialog_contact_title">Add contact information</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_use_contact_info">Apply</string>
    <string name="card_contact_title">Contact Information to help the cause</string>
    <string name="show_contact_hint">Show the contact info of the person in need</string>
    <string name="ok">Okay</string>
    <string name="title_activity_maps">Map</string>
    <string name="place">Help is needed here</string>
    <string name="etFilter_hint">Add filter</string>
    <string name="send_place">Save this location</string>
    <string name="save">Save</string>
    <string name="place_card_hint">See more information about the help needed here</string>
    <string name="itemSearch">Find volunteers</string>
    <string name="tasksC_title">Task completed</string>
    <string name="tasksS_title">Tasks created</string>
    <string name="etEmail_hint">Contact email for sponsors (Optional)</string>
    <string name="etTelephone_hint">Contact phone number for sponsors(Optional)</string>
    <string name="dialog_contact_in_post_title">Contact information</string>
    <string name="not_provided">Not provided</string>
    <string name="email">Contact Email:</string>
    <string name="title_chart_user">Points per day</string>
    <string name="title_worked_days">Days worked</string>
    <string name="title_maximum_day_points">Max. points per day</string>
    <string-array name="month_abrev">
        <item>Jan.</item>
        <item>Feb.</item>
        <item>Mar.</item>
        <item>Apr.</item>
        <item>May.</item>
        <item>Jun.</item>
        <item>Jul.</item>
        <item>Aug.</item>
        <item>Sep.</item>
        <item>Oct.</item>
        <item>Nov.</item>
        <item>Dec.</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="where_are_you">Where are you now?</string>
    <string name="success_profile_photo">New profile photo has been successfully updated</string>
    <string name="your_posts">Your posts:</string>
    <string name="mission">Mission:</string>
    <string name="where_org">Where can you find it?</string>
    <string name="title_themes">Themes:</string>
    <string name="title_countries">Countries where the organization operates in:</string>
    <string name="created">"Published: "</string>
    <string name="where_are_you_now">Where are you now?</string>
    <string name="profile_photo_description">Your profile photo</string>
    <string name="place_description">Click here to select a place that need help</string>
    <string name="close_place_description">Cancel place</string>
    <string name="contact_description">Add info contact</string>
    <string name="place_description_selected">The place selected</string>
    <string name="image_description">Select a picture</string>
    <string name="logo_org_description">Organization logo</string>
    <string name="place_description_post">Get info about the place</string>
    <string name="image_description_post">Image</string>
    <string name="complete">This task has been completed before</string>
    <string name="comment_btn_description">Comment this task</string>
    <string name="show_comments">Show comments about this task</string>
    <string name="add_task_btn_description">Add a new task</string>
    <string name="change_profile_photo_description">Change profile photo</string>
    <string name="projects">Active projects:</string>
    <string name="show_contact_info_project">Contat information</string>
    <string name="primary_theme">"Primary theme: "</string>
    <string name="perfect">Perfect</string>
    <string name="choice">choice for you</string>
    <string name="app_short_name">HelpAndo</string>
    <string name="new_task">New task:</string>
    <string name="basic_info">Basic info:</string>

</resources>