<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:id="@+id/containerLogIn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:layout_marginBottom="120dp"
        android:elevation="30dp"
        android:gravity="center_vertical"
        android:background="@color/gray_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/ivLogo_description"
            android:src="@drawable/helpando_logo_v1"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivLogo"
            app:startIconDrawable="@drawable/ic_user_24"
            android:layout_marginTop="64dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/etUser_hint"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tfUser"
            android:layout_marginTop="24dp"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_password_24"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:hint="@string/etPassword_hint"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tfPassword"
            android:layout_alignParentRight="true"
            android:layout_marginTop="24dp"
            android:text="@string/tvSignUp_text"
            android:contentDescription="@string/tvSignUp_description"
            android:clickable="true"
            android:onClick="onClickSignUp"
            android:textColor="@color/white"
            android:textStyle="italic" />
    </RelativeLayout>

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSignIn_text"
        android:onClick="onClickSignInButton"
        android:textColor="@color/white"
        android:contentDescription="@string/btnSignIn_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/containerLogIn" />
</androidx.constraintlayout.widget.ConstraintLayout>