<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.SignUpActivity">

    <RelativeLayout
        android:id="@+id/containerLogIn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:layout_marginBottom="120dp"
        android:elevation="30dp"
        android:gravity="center_vertical"
        android:background="@color/gray_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <ImageView
            android:id="@+id/ivIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/ivIcon_description"
            android:src="@drawable/ic_user_signup_24"
            android:layout_alignParentRight="true"
            android:layout_alignParentLeft="true"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivIcon"
            android:layout_marginTop="24dp"
            app:startIconDrawable="@drawable/ic_user_24"
            style="AppTheme.TextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/etUser_hint"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tfUser"
            android:layout_marginTop="24dp"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_password_24"
            style="AppTheme.TextInputLayout"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:hint="@string/etPassword_hint"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tfPassword"
            android:layout_marginTop="24dp"
            style="AppTheme.TextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/etName_hint"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfUserType"
            style="@style/AppTheme.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tfName"
            android:layout_marginTop="24dp">

            <AutoCompleteTextView
                android:id="@+id/acUserType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/etUserType_hint"
                android:background="@color/gray_1"
                android:textColor="@color/tv_login"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSignUp_text"
        android:onClick="onClickSignUpButton"
        android:textColor="@color/white"
        android:contentDescription="@string/btnSignUp_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/containerLogIn" />
</androidx.constraintlayout.widget.ConstraintLayout>